# norart

./: .gitignore  pyproject.toml  screenlog.0  test_norart.ipynb
norart/: oaiharvester.py
