[tool.poetry]
name = "norart"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^23.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
